--- a/Frontend/src/components/Frontend/Navbar/Navbar.css
+++ b/Frontend/src/components/Frontend/Navbar/Navbar.css
@@ -1,7 +1,8 @@
 /* Navbar.css */
 .navbar {
+    width:100%;
     margin-top: 0%;
-    background-color: lightblue; /* Light blue theme */
+    background-color: rgb(1, 70, 174); /* Light blue theme */
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -9,8 +10,10 @@
   }
   
   .navbar__logo {
+    height:20%;
     font-size: 1.5rem;
     font-weight: bold;
+    border-radius: 5px;
     color: #333;
     background-color: auto;
   }
@@ -19,6 +22,10 @@
     list-style: none;
     display: flex;
     gap: 1.5rem;
+  }
+
+  ul{
+    background-color:rgb(1, 70, 174);;
   }
   
   /* .navbar__item {} */
@@ -33,11 +40,29 @@
   .navbar__link:hover {
     color: #00509e; /* Darker blue on hover */
   }
+
+  .navbar__item {
+    background: pink;
+    border: none;
+    font-size: 1rem;
+    border-radius: 50px;
+    color: #333;
+    cursor: pointer;
+    padding: 8px 12px;
+    transition: color 0.3s ease, transform 0.2s ease;
+}
+
+.navbar__item:hover {
+    color: #00509e;
+    transform: scale(1.1);
+}
+
   
   .navbar__button {
     background-color: #00509e;
     color: white;
-    border: none;
+    border:5px solid  #62a3e5;
+    border-radius: 50px;
     padding: 0.5rem 1rem;
     font-size: 1rem;
     cursor: pointer;
