changed the color theme in app.css

--- a/Frontend/src/App.css
+++ b/Frontend/src/App.css
@@ -1,5 +1,5 @@
 *{
-  background-color: rgba(221, 200, 248, 0.5);
+  background-color: rgb(241, 243, 247);
   text-decoration: #8d6c83;
   align-items: center;
 }
