--- a/Frontend/src/components/Frontend/Navbar/Navbar.css
+++ b/Frontend/src/components/Frontend/Navbar/Navbar.css
@@ -1,12 +1,15 @@
 /* Navbar.css */
 .navbar {
     width:100%;
+    height:15%;
     margin-top: 0%;
-    background-color: rgb(1, 70, 174); /* Light blue theme */
+    background-color: rgb(241, 243, 247); /* Light blue theme */
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 1rem 2rem;
+    padding: 1rem 1rem;
+    /* border-bottom: 3px solid #e86ed0; */
+    box-shadow: 10px 4px 10px  #D4AF37;
   }
   
   .navbar__logo {
@@ -25,7 +28,12 @@
   }
 
   ul{
-    background-color:rgb(1, 70, 174);;
+    background-color:rgb(241, 243, 247);
+    display:flexbox;
+  }
+
+  li{
+    width:35%;
   }
   
   /* .navbar__item {} */
@@ -38,15 +46,16 @@
   }
   
   .navbar__link:hover {
-    color: #00509e; /* Darker blue on hover */
+    color: #e93acf; /* Darker blue on hover */
   }
 
   .navbar__item {
-    background: pink;
+    background: rgb(241, 243, 247);
     border: none;
+    width:100%;
     font-size: 1rem;
-    border-radius: 50px;
-    color: #333;
+    /*border-radius: 50%;*/
+    color: #e86ed0;
     cursor: pointer;
     padding: 8px 12px;
     transition: color 0.3s ease, transform 0.2s ease;
@@ -59,17 +68,18 @@
 
   
   .navbar__button {
-    background-color: #00509e;
+    background-color: hsl(310, 73%, 66%);
     color: white;
-    border:5px solid  #62a3e5;
-    border-radius: 50px;
+    border:2px solid #FAD7A0; /*#a86cf3;*/
+    border-radius: 45%;
     padding: 0.5rem 1rem;
     font-size: 1rem;
     cursor: pointer;
-    transition: background-color 0.3s ease;
+    transition: background-color 0.3s ease,transform 0.2s ease;
   }
   
   .navbar__button:hover {
-    background-color: #003b75;
+    background-color: hsl(310, 90%, 59%);
+    transform: scale(1.1);
   }
   
